--- a/app_mxh_manga/app/src/main/AndroidManifest.xml
+++ b/app_mxh_manga/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_mxh_manga"
         tools:targetApi="31">
+        <activity
+            android:name=".homePage.component.story.Activity_Reading"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".homePage.component.story.Activity_newChapter"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".login.component.Activity_signup"
             android:exported="false">
